# job-quest

./: CMakeLists.txt  README.md  game.c
include/: draw.h  events.h  game_state.h  system.h
src/: draw.c  events.c  system.c
